// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar snapshot should match snapshot 1`] = `
<Avatar
  title="Cisco Webex"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
  >
    <span>
      CW
    </span>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with icon 1`] = `
<Avatar
  icon="check"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
  >
    <Icon
      className="md-avatar-icon-wrapper"
      name="check"
      scale={16}
      weight="bold"
    >
      <div
        className="md-icon-wrapper md-avatar-icon-wrapper"
      >
        <svg
          className=""
          data-autoscale={false}
          data-scale={16}
          data-test="check"
          fill="currentColor"
          height="100%"
          stroke="currentColor"
          style={Object {}}
          viewBox="0, 0, 32, 32"
          width="100%"
        />
      </div>
    </Icon>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with initials 1`] = `
<Avatar
  initials="CW"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
  >
    <span>
      CW
    </span>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with presence 1`] = `
<div>
  <Avatar
    key="0"
    presence="default"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
    >
      <span>
        CW
      </span>
    </div>
  </Avatar>
  <Avatar
    key="1"
    presence="active"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
      >
        <Icon
          color="var(--avatar-presence-icon-active)"
          name="unread"
          scale={8}
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={8}
              data-test="unread"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-active)",
                  "stroke": "var(--avatar-presence-icon-active)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="2"
    presence="meet"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
      >
        <Icon
          color="var(--avatar-presence-icon-meeting)"
          name="camera-presence"
          scale={8}
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={8}
              data-test="camera-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-meeting)",
                  "stroke": "var(--avatar-presence-icon-meeting)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="3"
    presence="schedule"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
      >
        <Icon
          color="var(--avatar-presence-icon-schedule)"
          name="meetings-presence"
          scale={8}
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={8}
              data-test="meetings-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-schedule)",
                  "stroke": "var(--avatar-presence-icon-schedule)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="4"
    presence="DND"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
      >
        <Icon
          color="var(--avatar-presence-icon-dnd)"
          name="dnd-presence"
          scale={8}
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={8}
              data-test="dnd-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-dnd)",
                  "stroke": "var(--avatar-presence-icon-dnd)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="5"
    presence="presenting"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
      >
        <Icon
          color="var(--avatar-presence-icon-presenting)"
          name="share-screen"
          scale={8}
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={8}
              data-test="share-screen"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-presenting)",
                  "stroke": "var(--avatar-presence-icon-presenting)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="6"
    presence="quietHours"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
      >
        <Icon
          color="var(--avatar-presence-icon-quiet-hours)"
          name="quiet-hours-presence"
          scale={8}
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={8}
              data-test="quiet-hours-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-quiet-hours)",
                  "stroke": "var(--avatar-presence-icon-quiet-hours)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="7"
    presence="away"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
      >
        <Icon
          color="var(--avatar-presence-icon-away)"
          name="recents-presence"
          scale={8}
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={8}
              data-test="recents-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-away)",
                  "stroke": "var(--avatar-presence-icon-away)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
  <Avatar
    key="8"
    presence="OOO"
    title="Cisco Webex"
  >
    <div
      className="md-avatar-wrapper"
      data-color="default"
      data-size={24}
    >
      <span>
        CW
      </span>
      <div
        className="md-avatar-presence-icon-wrapper"
      >
        <Icon
          color="var(--avatar-presence-icon-ooo)"
          name="pto-presence"
          scale={8}
          weight="filled"
        >
          <div
            className="md-icon-wrapper"
          >
            <svg
              className=""
              data-autoscale={false}
              data-scale={8}
              data-test="pto-presence"
              height="100%"
              style={
                Object {
                  "fill": "var(--avatar-presence-icon-ooo)",
                  "stroke": "var(--avatar-presence-icon-ooo)",
                }
              }
              viewBox="0, 0, 32, 32"
              width="100%"
            />
          </div>
        </Icon>
      </div>
    </div>
  </Avatar>
</div>
`;

exports[`Avatar snapshot should match snapshot with size 1`] = `
<Avatar
  size={124}
  title="CW"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={124}
  >
    <span>
      C
    </span>
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with src & alt 1`] = `
<Avatar
  alt="alt"
  src="src"
  title="CW"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
  >
    <span>
      C
    </span>
    <img
      alt="alt"
      className="md-avatar-image-hidden"
      onError={[Function]}
      onLoad={[Function]}
      src="src"
    />
  </div>
</Avatar>
`;

exports[`Avatar snapshot should match snapshot with type 1`] = `
<Avatar
  title="Cisco Webex"
  type="space"
>
  <div
    className="md-avatar-wrapper"
    data-color="default"
    data-size={24}
  >
    <span>
      C
    </span>
  </div>
</Avatar>
`;
